<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="left|center_horizontal"
            android:padding="2dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/time_text" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/cond_text" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/precip_text" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/wind_text" />

        <TextView
            style="@style/HeaderStyle"
            android:text="@string/temp_text" />
    </LinearLayout>
    
    <ListView  
        android:id="@+id/hourlyDataList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>